force-app/main/default/objects/Order/fields/DaysBeforeClientsDeparture__c.field-meta.xml
<CustomField>
    <fullName>DaysBeforeClientsDeparture__c</fullName>
    <formula>MPExitDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días antes de la salida del cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>