force-app/main/default/objects/Order/fields/ExitDatetime__c.field-meta.xml
<CustomField>
    <fullName>ExitDatetime__c</fullName>
    <formula>IF(  ISPICKVAL($User.TimeZoneSidKey , &quot;America/Punta_Arenas&quot;),
DATETIMEVALUE(MPExitDate__c)  + (11/24),DATETIMEVALUE(MPExitDate__c)  + (13/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha y hora de Salida</label>
    <type>DateTime</type>
</CustomField>