force-app/main/default/objects/Order/fields/MP_API45WasExecuted__c.field-meta.xml
<CustomField>
    <fullName>MP_API45WasExecuted__c</fullName>
    <formula>NOT(ISBLANK(MPContractRescissionStatus__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Se ejetutó la Integracion 4.5?</label>
    <type>Checkbox</type>
</CustomField>