force-app/main/default/objects/Order/fields/MP_Local__c.field-meta.xml
<CustomField>
    <fullName>MP_Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local</label>
    <referenceTo>MPStore__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>