force-app/main/default/objects/Order/fields/MPAgreementContRescissionStatus__c.field-meta.xml
<CustomField>
    <fullName>MPAgreementContRescissionStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API Rescición de Contrato Acuerdo</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Orders (API Rescición de Contratos Acuerdo)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>