force-app/main/default/objects/Order/fields/MPAM__c.field-meta.xml
<CustomField>
    <fullName>MPAM__c</fullName>
    <label>AM de la Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>