force-app/main/default/objects/Order/fields/MPAmountOfTimeEntryProjections__c.field-meta.xml
<CustomField>
    <fullName>MPAmountOfTimeEntryProjections__c</fullName>
    <description>Cantidad de tiempo utilizada en las proyecciones financieras de entrada de la orden de término de contrato.</description>
    <inlineHelpText>Duración proyectada del posible contrato en relación a una oportunidad en progreso</inlineHelpText>
    <label>Cantidad en tiempo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>