force-app/main/default/objects/Order/fields/MPAmountOfTimeExitProjections__c.field-meta.xml
<CustomField>
    <fullName>MPAmountOfTimeExitProjections__c</fullName>
    <description>Cantidad de tiempo utilizada en las proyecciones financieras de salida de la orden de término de contrato.</description>
    <inlineHelpText>Tiempo restante del contrato actual, calculado desde el tiempo que queda hasta su fecha de finalización.</inlineHelpText>
    <label>Cantidad en tiempo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>