force-app/main/default/objects/Order/fields/MPCancellationContractRescission__c.field-meta.xml
<CustomField>
    <fullName>MPCancellationContractRescission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API Cancelamiento Rescición de Contrato</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Orders (API Cancelamiento Rescición de Contrato)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>