force-app/main/default/objects/Order/fields/MPClosedLostReason__c.field-meta.xml
<CustomField>
    <fullName>MPClosedLostReason__c</fullName>
    <label>Motivo de Cerrada/Perdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>El plazo acordado (fecha de salida) ha llegado a su vencimiento</fullName>
            </value>
            <value>
                <fullName>Socio comercial desea continuar con la relación comercial</fullName>
            </value>
            <value>
                <fullName>Socio comercial y Mallplaza no llegaron a un acuerdo de salida</fullName>
            </value>
            <value>
                <fullName>Proceso judicial rechazado</fullName>
            </value>
            <value>
                <fullName>No hay aprobación comercial de la salida</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>