force-app/main/default/objects/Order/fields/MPCommercialApproval__c.field-meta.xml
<CustomField>
    <fullName>MPCommercialApproval__c</fullName>
    <label>Aprobación Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPApprovalField</valueSetName>
    </valueSet>
</CustomField>