force-app/main/default/objects/Order/fields/MPContractAM__c.field-meta.xml
<CustomField>
    <fullName>MPContractAM__c</fullName>
    <label>Valor AM Contrato SAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>