force-app/main/default/objects/Order/fields/MPContractBrand__c.field-meta.xml
<CustomField>
    <fullName>MPContractBrand__c</fullName>
    <formula>Contract.MPBrand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>