force-app/main/default/objects/Order/fields/MPContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>MPContractEndDate__c</fullName>
    <label>Fecha final del contrato</label>
    <type>Date</type>
</CustomField>