force-app/main/default/objects/Order/fields/MPContractRescissionStatus__c.field-meta.xml
<CustomField>
    <fullName>MPContractRescissionStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API Rescición de Contratos</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>