force-app/main/default/objects/Order/fields/MPContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>MPContractStartDate__c</fullName>
    <label>Fecha de inicio del contrato</label>
    <type>Date</type>
</CustomField>