force-app/main/default/objects/Order/fields/MPDisablingStage__c.field-meta.xml
<CustomField>
    <fullName>MPDisablingStage__c</fullName>
    <label>Etapa de Deshabilitación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparación del local</fullName>
            </value>
            <value>
                <fullName>Restitución cierre y desconexión</fullName>
            </value>
            <value>
                <fullName>Armado de caja</fullName>
            </value>
            <value>
                <fullName>Nuevas acometidas</fullName>
            </value>
            <value>
                <fullName>Cierre y entrega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>