force-app/main/default/objects/Order/fields/MPDocumentedPaymentApproval__c.field-meta.xml
<CustomField>
    <fullName>MPDocumentedPaymentApproval__c</fullName>
    <label>Aprobación de Pago Documentado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPApprovalField</valueSetName>
    </valueSet>
</CustomField>