force-app/main/default/objects/Order/fields/MPExceptionApplies__c.field-meta.xml
<CustomField>
    <fullName>MPExceptionApplies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica Excepción</label>
    <type>Checkbox</type>
</CustomField>