force-app/main/default/objects/Order/fields/MPExceptionApproval__c.field-meta.xml
<CustomField>
    <fullName>MPExceptionApproval__c</fullName>
    <label>Aprobación de Excepción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPApprovalField</valueSetName>
    </valueSet>
</CustomField>