force-app/main/default/objects/Order/fields/MPExceptionComments__c.field-meta.xml
<CustomField>
    <fullName>MPExceptionComments__c</fullName>
    <label>Comentarios de Excepción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>