force-app/main/default/objects/Order/fields/MPExceptionReason__c.field-meta.xml
<CustomField>
    <fullName>MPExceptionReason__c</fullName>
    <label>Motivo de Excepción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Socio comercial con mal desempeño</fullName>
            </value>
            <value>
                <fullName>Socio comercial que actualmente incumple sus compromisos de pago</fullName>
            </value>
            <value>
                <fullName>Socio comercial que se ha convertido en un problema</fullName>
            </value>
            <value>
                <fullName>Hay un Reemplazo que aporta al mix comercial</fullName>
            </value>
            <value>
                <fullName>Hay un Reemplazo que aporta mayor rentabilidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>