force-app/main/default/objects/Order/fields/MPExitDate__c.field-meta.xml
<CustomField>
    <fullName>MPExitDate__c</fullName>
    <description>Campo creado para tener la información de la fecha de entrega del local cuando hay una terminación de contrato</description>
    <label>Fecha de Salida</label>
    <type>Date</type>
</CustomField>