force-app/main/default/objects/Order/fields/MPExitDescription__c.field-meta.xml
<CustomField>
    <fullName>MPExitDescription__c</fullName>
    <label>Razón de Salida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>