force-app/main/default/objects/Order/fields/MPExitReason__c.field-meta.xml
<CustomField>
    <fullName>MPExitReason__c</fullName>
    <label>Motivo de Salida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finalización de vínculo comercial por cumplimiento de contrato</fullName>
            </value>
            <value>
                <fullName>Aplicación de cláusula de salida a favor de Socio comercial</fullName>
            </value>
            <value>
                <fullName>Aplicación de cláusula de salida a favor de Mallplaza</fullName>
            </value>
            <value>
                <fullName>Aplicación bilateral de cláusula de salida</fullName>
            </value>
            <value>
                <fullName>Socio comercial desea salir de manera anticipada</fullName>
            </value>
            <value>
                <fullName>Mallplaza desea de manera anticipada finalizar el vínculo comercial con el Socio comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>