force-app/main/default/objects/Order/fields/MPFlexibleClauses2__c.field-meta.xml
<CustomField>
    <fullName>MPFlexibleClauses2__c</fullName>
    <label>Cláusula Flex. 2: Estado del Local</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPFlexibleClauses2</valueSetName>
    </valueSet>
</CustomField>