force-app/main/default/objects/Order/fields/MPFlexibleClauses3__c.field-meta.xml
<CustomField>
    <fullName>MPFlexibleClauses3__c</fullName>
    <inlineHelpText>Cláusula flexible 3 (Posición contractual)</inlineHelpText>
    <label>Cláusula Flex. 3: Posición Contr.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPFlexibleClauses3</valueSetName>
    </valueSet>
</CustomField>