force-app/main/default/objects/Order/fields/MPFootageEntryProjections__c.field-meta.xml
<CustomField>
    <fullName>MPFootageEntryProjections__c</fullName>
    <description>Metraje del local asociado a la oportunidad más avanzada utilizado en las proyecciones financieras de entrada de la orden de término de contrato.</description>
    <inlineHelpText>Metraje del local de la oportunidad más avanzada al momento de calcular las proyecciones financieras de entrada.</inlineHelpText>
    <label>Metraje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>