force-app/main/default/objects/Order/fields/MPFootageExitProjections__c.field-meta.xml
<CustomField>
    <fullName>MPFootageExitProjections__c</fullName>
    <description>Metraje del local del contrato utilizado en las proyecciones financieras de salida de la orden de término de contrato.</description>
    <inlineHelpText>Metraje del local del contrato al momento de calcular las proyecciones financieras de salida.</inlineHelpText>
    <label>Metraje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>