force-app/main/default/objects/Order/fields/MPFTCPrincipal__c.field-meta.xml
<CustomField>
    <fullName>MPFTCPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FTC Principal</label>
    <referenceTo>MPContractTerminationRecords__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>