force-app/main/default/objects/Order/fields/MPGetContractStatus__c.field-meta.xml
<CustomField>
    <fullName>MPGetContractStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integración obtener contrato 4.1</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Orders (Integración Get Contract 4.1)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>