force-app/main/default/objects/Order/fields/MPHigherProbabilityOpportunity__c.field-meta.xml
<CustomField>
    <fullName>MPHigherProbabilityOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad más avanzada utilizada en las proyecciones financieras de entrada.</description>
    <inlineHelpText>Oportunidad más avanzada al momento de calcular las proyecciones financieras de entrada.</inlineHelpText>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Órdenes de Término</relationshipLabel>
    <relationshipName>TerminationOrders</relationshipName>
    <type>Lookup</type>
</CustomField>