force-app/main/default/objects/Order/fields/MPLastInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>MPLastInvoiceDate__c</fullName>
    <label>Fecha ultima de facturación</label>
    <type>Date</type>
</CustomField>