force-app/main/default/objects/Order/fields/MPLegalProcessApproval__c.field-meta.xml
<CustomField>
    <fullName>MPLegalProcessApproval__c</fullName>
    <label>Aprobación Proceso Judicial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPApprovalField</valueSetName>
    </valueSet>
</CustomField>