force-app/main/default/objects/Order/fields/MPLegalProcessReason__c.field-meta.xml
<CustomField>
    <fullName>MPLegalProcessReason__c</fullName>
    <label>Motivos del Proceso Judicial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>