force-app/main/default/objects/Order/fields/MPLegalProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>MPLegalProcessStatus__c</fullName>
    <label>Estado Proceso Judicial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proceso judicial iniciado</fullName>
            </value>
            <value>
                <fullName>Restitución iniciada</fullName>
            </value>
            <value>
                <fullName>Restitución finalizada</fullName>
            </value>
            <value>
                <fullName>Bienes retirados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>