force-app/main/default/objects/Order/fields/MPLostReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>MPLostReasonDescription__c</fullName>
    <label>Descripción de Motivo Cerrada/Perdida</label>
    <type>TextArea</type>
</CustomField>