force-app/main/default/objects/Order/fields/MPNumberOfInstalments__c.field-meta.xml
<CustomField>
    <fullName>MPNumberOfInstalments__c</fullName>
    <inlineHelpText>Se ingresa un valor sugerido el cual será aprobado por riesgos</inlineHelpText>
    <label>Numero de pagarés</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>