force-app/main/default/objects/Order/fields/MPOppStage__c.field-meta.xml
<CustomField>
    <fullName>MPOppStage__c</fullName>
    <label>Etapa de la oportunidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>