force-app/main/default/objects/Order/fields/MPPaymentComments__c.field-meta.xml
<CustomField>
    <fullName>MPPaymentComments__c</fullName>
    <inlineHelpText>Por favor, ingrese observaciones o detalles adicionales relacionados con el método de pago.</inlineHelpText>
    <label>Comentarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>