force-app/main/default/objects/Order/fields/MPPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>MPPaymentMethod__c</fullName>
    <label>Forma de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documentada</fullName>
            </value>
            <value>
                <fullName>Transferencia_con_garantías</fullName>
                <label>Transferencia con garantías</label>
            </value>
            <value>
                <fullName>Transferencia_sin_garantías</fullName>
                <label>Transferencia sin garantías</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>