force-app/main/default/objects/Order/fields/MPPaymentMethodConfirmed__c.field-meta.xml
<CustomField>
    <fullName>MPPaymentMethodConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forma de Pago Confirmada?</label>
    <type>Checkbox</type>
</CustomField>