force-app/main/default/objects/Order/fields/MPPaymentMethodText__c.field-meta.xml
<CustomField>
    <fullName>MPPaymentMethodText__c</fullName>
    <formula>CASE(
     TEXT( MPPaymentMethod__c ),
        &apos;Documentada&apos;, &apos;La deuda ya fue documentada&apos;, 
        &apos;Transferencia_con_garantías&apos;, &apos;Cliente ya pagó&apos;,
        &apos;Transferencia_sin_garantías&apos;, &apos;Cliente ya pagó&apos;,
     null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Texto forma de pago</label>
    <type>Text</type>
</CustomField>