force-app/main/default/objects/Order/fields/MPRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>MPRejectionReason__c</fullName>
    <label>Motivo de rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RejectedByExceptionAndOrSpecialCondition</fullName>
                <label>Rechazada por Excepción y/o Condición Especial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>