force-app/main/default/objects/Order/fields/MPReplacementGenerates__c.field-meta.xml
<CustomField>
    <fullName>MPReplacementGenerates__c</fullName>
    <label>Reemplazo genera</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>