force-app/main/default/objects/Order/fields/MPSignatureStatus__c.field-meta.xml
<CustomField>
    <fullName>MPSignatureStatus__c</fullName>
    <label>Estado Firma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Firmada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>