force-app/main/default/objects/Order/fields/MPSpecialClauses1__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialClauses1__c</fullName>
    <label>Cláusula especial 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>