force-app/main/default/objects/Order/fields/MPSpecialConditionAmount__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialConditionAmount__c</fullName>
    <label>Monto condición especial por aplicar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>