force-app/main/default/objects/Order/fields/MPSpecialConditionInFavorOf__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialConditionInFavorOf__c</fullName>
    <label>A favor de</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mallplaza</fullName>
            </value>
            <value>
                <fullName>Socio comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>