force-app/main/default/objects/Order/fields/MPSpecialConditionReason__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialConditionReason__c</fullName>
    <label>Motivo condición especial por aplicar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>