force-app/main/default/objects/Order/fields/MPSpecialConditionToApply__c.field-meta.xml
<CustomField>
    <fullName>MPSpecialConditionToApply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condición Especial por Aplicar</label>
    <type>Checkbox</type>
</CustomField>