force-app/main/default/objects/Order/fields/MPStage__c.field-meta.xml
<CustomField>
    <fullName>MPStage__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activación de Término</fullName>
            </value>
            <value>
                <fullName>Negociación</fullName>
            </value>
            <value>
                <fullName>Condición de Pago</fullName>
            </value>
            <value>
                <fullName>Deshabilitación</fullName>
            </value>
            <value>
                <fullName>Proceso Judicial</fullName>
            </value>
            <value>
                <fullName>Cerrado Ganado</fullName>
            </value>
            <value>
                <fullName>Cerrado Perdido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>