force-app/main/default/objects/Order/fields/MPStopPerceiving__c.field-meta.xml
<CustomField>
    <fullName>MPStopPerceiving__c</fullName>
    <label>Deja de percibir</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>