force-app/main/default/objects/Order/fields/MPWarrantyUse__c.field-meta.xml
<CustomField>
    <fullName>MPWarrantyUse__c</fullName>
    <label>Uso de garantía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aplicar Garantías</fullName>
            </value>
            <value>
                <fullName>Devolución de Garantías</fullName>
                <default>true</default>
                <label>Devolución de Garantías</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>