force-app/main/default/objects/Order/recordTypes/MPServiceDelivery.recordType-meta.xml
<RecordType>
    <fullName>MPServiceDelivery</fullName>
    <active>true</active>
    <label>Prestación de servicio</label>
</RecordType>