force-app/main/default/objects/Order/recordTypes/MPTermination.recordType-meta.xml
<RecordType>
    <fullName>MPTermination</fullName>
    <active>true</active>
    <label>Término</label>
</RecordType>