force-app/main/default/objects/Order/validationRules/VRO_005_MPTerminationOrderDocumentedPay.validationRule-meta.xml
<ValidationRule>
    <fullName>VRO_005_MPTerminationOrderDocumentedPay</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
RecordType.DeveloperName = &apos;MPTermination&apos;,
ISPICKVAL(	MPPaymentMethod__c, &apos;Documentada&apos;) ,
OR(
ISBLANK( MPNumberOfInstalments__c ),
ISBLANK(MPPaymentComments__c), 
ISBLANK(TEXT(MPWarrantyUse__c)) 
				)
)</errorConditionFormula>
    <errorMessage>Por favor ingrese el número de pagarés, el uso de garantía y los comentarios correspondientes. (VRO_005)</errorMessage>
</ValidationRule>