force-app/main/default/objects/Order/validationRules/VRO_006_MPTerminationOrderPaymentMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>VRO_006_MPTerminationOrderPaymentMethod</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    RecordType.DeveloperName = &apos;MPTermination&apos;,
    OR(
        AND(
            TEXT(MPPaymentMethod__c) = &quot;Transferencia con garantías&quot;,
            TEXT(MPWarrantyUse__c) &lt;&gt; &quot;Aplicar Garantías&quot;
        ),
        AND(
            TEXT(MPPaymentMethod__c) = &quot;Transferencia sin garantías&quot;,
            TEXT(MPWarrantyUse__c) &lt;&gt; &quot;Devolución de Garantías&quot;
        )
    )
)</errorConditionFormula>
    <errorMessage>Si el método de pago es &apos;Transferencia con garantías&apos;, el campo &apos;Uso de garantías&apos; debe ser &apos;Aplicar Garantías&apos;. Si el método de pago es &apos;Transferencia sin garantías&apos;, el campo &apos;Uso de garantías&apos; debe ser &apos;Devolución de Garantías&apos;. (VRO_006)</errorMessage>
</ValidationRule>